--- a/sia_app/Base.lproj/Main.storyboard
+++ b/sia_app/Base.lproj/Main.storyboard
@@ -278,8 +278,8 @@
                                     <string>Title</string>
                                 </scopeButtonTitles>
                             </searchBar>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" misplaced="YES" text="Hola Usuario" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="KQZ-1w-vlD">
-                                <rect key="frame" x="112" y="312" width="150.5" height="43"/>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" text="Hola Usuario" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="KQZ-1w-vlD">
+                                <rect key="frame" x="88" y="312" width="199" height="43"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="36"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -292,6 +292,7 @@
                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                                 <connections>
+                                    <action selector="busqueda_1:" destination="9pv-A4-QxB" eventType="touchUpInside" id="XcX-ve-XtG"/>
                                     <segue destination="s2K-9U-yfv" kind="show" id="qXb-Ff-zd7"/>
                                 </connections>
                             </button>
@@ -299,6 +300,7 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="centerX" secondItem="KQZ-1w-vlD" secondAttribute="centerX" id="6BV-lF-sBN"/>
+                            <constraint firstItem="KQZ-1w-vlD" firstAttribute="leading" secondItem="PQr-Ze-W5v" secondAttribute="leading" constant="88" id="FeF-e2-Tcp"/>
                             <constraint firstAttribute="centerY" secondItem="KQZ-1w-vlD" secondAttribute="centerY" id="exm-UA-ej4"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="PQr-Ze-W5v"/>
@@ -309,10 +311,10 @@
             </objects>
             <point key="canvasLocation" x="1728.8" y="-117.39130434782609"/>
         </scene>
-        <!--View Controller-->
+        <!--Busqueda View Controller-->
         <scene sceneID="XgY-tg-NyP">
             <objects>
-                <viewController id="s2K-9U-yfv" sceneMemberID="viewController">
+                <viewController id="s2K-9U-yfv" customClass="busquedaViewController" customModule="sia_app" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="H3c-G6-SNJ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -339,6 +341,7 @@
                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                                 <connections>
+                                    <action selector="busqueda_2:" destination="s2K-9U-yfv" eventType="touchUpInside" id="qet-dz-Rov"/>
                                     <segue destination="Ah1-ZS-iUe" kind="show" id="BLs-sz-xpH"/>
                                 </connections>
                             </button>
@@ -431,7 +434,7 @@
         <!--Acerca de-->
         <scene sceneID="EdY-8V-LQk">
             <objects>
-                <viewController id="Xcg-os-dYp" sceneMemberID="viewController">
+                <viewController id="Xcg-os-dYp" customClass="AcercadeViewController" customModule="sia_app" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="yhK-7J-25f">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -442,6 +445,9 @@
                                 <state key="normal" title="Mi historia" image="toca-sia.png">
                                     <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                 </state>
+                                <connections>
+                                    <action selector="reproduce_saludo:" destination="Xcg-os-dYp" eventType="touchUpInside" id="ywS-kG-ZVa"/>
+                                </connections>
                             </button>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="aZ6-PI-B0Z">
                                 <rect key="frame" x="41" y="214" width="292" height="373"/>
